# UQ

./: .gitignore  README.md  gen_answer.py  key.env  pyproject.toml  validate.py
llm_prefilter/: filter.py
stackexchange_crawler/: README.md  dataset_crawler.py  diamond.sh  diamond_config.py  filters.py  merge.py  oneoff_crawler.py  sites.jsonl  stackexchange_client.py
uq_validator/: README.md  __init__.py  base.py  cli.py  decorators.py  factory.py  model_adapters.py  strategies.py
utils/: api_utils.py  dataset_utils.py  utils.py
