[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uq-validator"
version = "0.1.0"
description = "UQ Validators are a set of tools trying to pre-screen candidate answers to unsolved questions"
readme = "README.md"
license = {text = "CC BY-SA"}
authors = [{name = "UQ Project Team", email = "niefan@stanford.edu"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: CC BY-SA",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.8"
dependencies = [
    "tqdm>=4.64.0",
    "anthropic>=0.7.0",
    "openai>=1.0.0",
    "requests>=2.28.0",
    "python-dotenv>=0.19.0",
    "google-generativeai>=0.3.0",
    "datasets>=2.0.0",
    "together>=0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=5.0.0",
    "mypy>=0.991",
]

[project.scripts]
uq-validate = "uq_validator.cli:main"

[project.urls]
Homepage = "https://github.com/uq-project/UQ"
Repository = "https://github.com/uq-project/UQ"
Issues = "https://github.com/uq-project/UQ/issues"

[tool.setuptools.packages.find]
include = ["uq_validator*"]

[tool.black]
line-length = 88
target-version = ['py38']


[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true